# ordent

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: ordent_bench.rs
src/: core.rs  lib.rs  prelude.rs
tests/: integration_test.rs  limit_test.rs  physics_test.rs
