[package]
name = "ordent"
version = "0.1.0"
edition = "2021"
authors = ["Rhetro <rhetro@rhetroxc.com>"]
description = "A physics-to-silicon synchronous router. Maps Kuramoto model dynamics to hardware for deterministic, ultra-high-speed semantic routing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhetro/ordent"
readme = "README.md"
keywords = ["kuramoto", "simd", "simulation", "physics", "router"]
categories = ["science", "simulation", "algorithms"]

[dependencies]
ordex = "0.1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ordent_bench"
harness = false
